--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
         }
         stage('Deploy') { 
             steps {
+                input message: 'Finished using the web site? (Click "Proceed" to continue)'
                 sh './jenkins/scripts/deliver.sh'
             }
         }
