--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'node:lts'
-            args '-p 3000:3000'
+            args '-d -p 3000:3000'
         }
     }
     stages {
